--- a/reactapp/src/LandPage/LandPage.css
+++ b/reactapp/src/LandPage/LandPage.css
@@ -1,55 +1,5 @@
-body { 
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100vh;
-  }
-  
-  .header {
-    overflow: hidden;
-    background-color: rgb(7, 7, 46);
-    padding: 20px 10px;
-  }
-  
-  .header a {
-    float: left;
-    color: white;
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 18px; 
-    line-height: 25px;
-    border-radius: 4px;
 
-  }
   
-  .header a.logo {
-    font-size: 25px;
-    font-weight: bold;
-  }
-  
-  .header a:hover {
-    background-color: rgb(66, 66, 145);
-    color: white;
-  }
-  
-  .header a.active {
-    color: white;
-  }
-  
-  .header-right {
-    float: right;
-  }
-  
-  .icon{
-    height: 30px;
-    width: 40px;
-    
-  }
-  .github{
-
-  }
   .linkedin{
     color: rgba(24,119,242);
   }
@@ -83,3 +33,18 @@ body {
 
   }
   
+
+ .card-body-1{
+    
+      background-image: url('../Images/BackImg.jpg'); 
+      background-size: cover;
+      background-repeat: no-repeat;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width:100%
+    
+  }
+  .card-footer {
+    flex-shrink: 0;
+  }
