--- a/reactapp/src/adminComponents/Header.css
+++ b/reactapp/src/adminComponents/Header.css
@@ -1,10 +1,10 @@
-body{
+  body{
   margin:0;
   padding:0;
   background-color: #1d2634;
   color:#9e9ea4;
   font-family: 'Montserrat', sans-serif;
-}
+} 
 
 .icon {
   vertical-align: middle;
@@ -56,7 +56,7 @@ body{
 /* Header.css */
 
 .header {
-  width: 100%; /* Ensure the header covers the full width */
+    width: 100%; /* Ensure the header covers the full width */
   background-color: #333; /* Add your preferred background color */
   color: white; /* Set text color */
   padding: 10px; /* Add padding as needed */
@@ -65,6 +65,27 @@ body{
   align-items: center;
   height: 10%;
 }
+/* Add this to your stylesheet */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px; /* Add padding as needed */
+}
+
+.logo-and-text {
+  display: flex;
+  align-items: center;
+}
+
+.icon {
+  width: 24px;
+  height: 25px;
+  margin-right: 10px; /* Add margin as needed for spacing between icon and text */
+}
+
+
+
 
 .but{
  color: aqua;
